Anonymous | Login | 2021-01-24 05:27 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0024905 | Open CASCADE | [OCCT] OCCT:Modeling Algorithms | public | 2014-05-07 16:28 | 2018-10-28 16:13 | ||||
Reporter | szv | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 6.7.1 | ||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0024905: Boolean cut produced invalid result | ||||||||
Description | Cutting of two mutually inclined cylinders produces an invalid shape. | ||||||||
Steps To Reproduce | pload MODELING DATAEXCHANGE circle c1 0 0 0 0 -1 0 75 circle c2 0 0 0 0 -1 0 65 mkedge c1 c1 mkedge c2 c2 wire c1 c1 wire c2 c2 orientation c2 R mkplane f1 c1 1 add c2 f1 prism p1 f1 0 1000 0 trotate p1 0 0 0 0 0 1 180 circle c3 50 500 -2000 0 0 1 50 mkedge c3 c3 wire c3 c3 mkplane f2 c3 1 prism p2 f2 0 0 4000 trotate p2 0 500 0 1 0 0 -77 #trotate p2 0 500 0 0 1 0 0 trotate p2 0 0 0 0 0 1 180 bcut r1 p1 p2 checkshape r1 | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs modalg_7 bug24905 | ||||||||
Attached Files | |||||||||
![]() |
||||||
|
![]() |
|
(0080229) git (administrator) 2018-10-23 14:08 |
Branch CR24905 has been created by nbv. SHA-1: 5523a3a6a2a265960a1e995e8ac41f2354fd32d4 Detailed log of new commits: Author: nbv Date: Tue Oct 23 14:07:11 2018 +0300 0024905: Boolean cut produced invalid result The method BOPAlgo_PaveFiller::PutClosingPaveOnCurve(...) has been improved in order to take into account extended vertex tolerance. |
(0080242) git (administrator) 2018-10-23 18:53 |
Branch CR24905 has been updated by nbv. SHA-1: 6e910e5c3d343852c4b99ebdcb8ca24d6f302e9d Detailed log of new commits: Author: nbv Date: Tue Oct 23 18:52:32 2018 +0300 # Test case has been created |
(0080249) nbv (developer) 2018-10-24 09:39 |
Dear Eugeny, Please review the current state of CR24905 branch. Test results are here: http://jenkins-test-12.nnov.opencascade.com/view/CR24905-master_NBV/ [^] |
(0080251) emv (developer) 2018-10-24 10:03 |
Since it was me who developed the patch, it will be better if Mikhail will take a look at the code. I have only one remark for the test case: - combine all "checkshape" and "bopargcheck" checks into one cycle: foreach r {r_0 r_1 r_2 r_3 r_4} { checkshape $r if {[regexp "Faulties" [bopargcheck $f]]} { puts "Error: bopargcheck has found some faulties in $r" } } |
(0080254) msv (developer) 2018-10-24 11:07 |
In addition to the remark of Eugeny: tests/bugs/modalg_7/bug24905 - wrong header |
(0080262) git (administrator) 2018-10-24 11:50 |
Branch CR24905 has been updated by nbv. SHA-1: 9bf3eeb6f261b8ac98bda9e4235ca300e4b84739 Detailed log of new commits: Author: nbv Date: Wed Oct 24 11:48:44 2018 +0300 # Correction in the test case |
(0080264) nbv (developer) 2018-10-24 12:07 |
Done. Dear Mikhail, Please review the branch CR24905 again. |
(0080266) msv (developer) 2018-10-24 12:22 |
Reviewed. |
(0080267) apn (administrator) 2018-10-24 12:33 |
Combination - OCCT branch : CR24905 SHA - 5523a3a6a2a265960a1e995e8ac41f2354fd32d4 Products branch : master SHA - 35af85def09c66ceeaf90b4e4fb8b54e68d5e98c was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences Test case: bugs modalg_7 bug24905 - OK CPU differences: Debian80-64: OCCT Total CPU difference: 17652.459999999825 / 17520.90999999988 [+0.75%] Products Total CPU difference: 7444.570000000064 / 7462.09000000004 [-0.23%] Windows-64-VC14: OCCT Total CPU difference: 17620.90575379838 / 17666.582846598394 [-0.26%] Products Total CPU difference: 8337.036642199979 / 8372.402068899986 [-0.42%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0080411) git (administrator) 2018-10-28 16:13 |
Branch CR24905 has been deleted by inv. SHA-1: 9bf3eeb6f261b8ac98bda9e4235ca300e4b84739 |
![]() |
|||
occt: master a8b8f90d
Timestamp: 2018-10-23 11:07:11 Author: nbv Committer: apn [ Details ] [ Diff ] |
0024905: Boolean cut produced invalid result The method BOPAlgo_PaveFiller::PutClosingPaveOnCurve(...) has been improved in order to take into account extended vertex tolerance. |
||
mod - src/BOPAlgo/BOPAlgo_PaveFiller_6.cxx | [ Diff ] [ File ] | ||
add - tests/bugs/modalg_7/bug24905 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2014-05-07 16:28 | szv | New Issue | |
2014-05-07 16:28 | szv | Assigned To | => ifv |
2014-05-23 12:25 | ifv | Assigned To | ifv => pkv |
2014-05-23 12:25 | ifv | Status | new => assigned |
2014-09-12 14:07 | abv | Target Version | => 7.1.0 |
2015-07-31 13:33 | pkv | Relationship added | parent of 0026509 |
2016-10-25 17:42 | msv | Assigned To | pkv => |
2016-10-25 17:42 | msv | Steps to Reproduce Updated | View Revisions |
2016-10-25 17:43 | msv | Assigned To | => msv |
2016-10-25 17:43 | msv | Target Version | 7.1.0 => 7.2.0 |
2017-07-24 09:33 | msv | Target Version | 7.2.0 => 7.3.0 |
2017-12-05 17:08 | msv | Target Version | 7.3.0 => 7.4.0 |
2018-10-23 14:08 | git | Note Added: 0080229 | |
2018-10-23 18:53 | git | Note Added: 0080242 | |
2018-10-24 09:39 | nbv | Note Added: 0080249 | |
2018-10-24 09:39 | nbv | Assigned To | msv => emv |
2018-10-24 09:39 | nbv | Status | assigned => resolved |
2018-10-24 10:03 | emv | Note Added: 0080251 | |
2018-10-24 10:03 | emv | Assigned To | emv => msv |
2018-10-24 11:07 | msv | Note Added: 0080254 | |
2018-10-24 11:07 | msv | Assigned To | msv => nbv |
2018-10-24 11:07 | msv | Status | resolved => assigned |
2018-10-24 11:50 | git | Note Added: 0080262 | |
2018-10-24 12:07 | nbv | Note Added: 0080264 | |
2018-10-24 12:07 | nbv | Assigned To | nbv => msv |
2018-10-24 12:07 | nbv | Status | assigned => resolved |
2018-10-24 12:22 | msv | Note Added: 0080266 | |
2018-10-24 12:22 | msv | Assigned To | msv => bugmaster |
2018-10-24 12:22 | msv | Status | resolved => reviewed |
2018-10-24 12:33 | apn | Test case number | => bugs modalg_7 bug24905 |
2018-10-24 12:33 | apn | Note Added: 0080267 | |
2018-10-24 12:33 | apn | Status | reviewed => tested |
2018-10-28 13:20 | apn | Changeset attached | => occt master a8b8f90d |
2018-10-28 13:20 | apn | Assigned To | bugmaster => apn |
2018-10-28 13:20 | apn | Status | tested => verified |
2018-10-28 13:20 | apn | Resolution | open => fixed |
2018-10-28 16:13 | git | Note Added: 0080411 |
Copyright © 2000 - 2021 MantisBT Team |